<resources>
    <string name="app_name">MyFoodJournal</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">2044150749169527</string>
    <string name="fb_login_protocol_scheme">fb2044150749169527</string>

    <!-- Strings related to navigation bar -->
    <string name="nav_home">Home Page</string>
    <string name="nav_myreviews">My Reviews</string>
    <string name="nav_logout">Log Out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">Usernames must be between 5 and 12 characters</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">A password must be at least 8 characters</string>
    <string name="error_incorrect_password">A password requires one number</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings for Registration Activity -->
    <string name="register_title">Registration</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Please put first name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Please put last name</string>
    <string name="terms_and_services">Terms and Services</string>
    <string name="password_hint">(One Uppercase, One Number, and One Special Character; Length must also be greater than 6 characters)</string>
    <string name="password_label">Password</string>
    <string name="username_hint">Screen Name</string>
    <string name="username_label">Username</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="reject_terms">Reject Terms</string>
    <string name="register_label">Register</string>
    <string name="or_label">Or</string>
    <string name="return_label">Return</string>
    <string name="email_hint">Please enter email address</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Key Strings for Entry Retrieval -->
</resources>